--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,8 @@
   "name": "ojt_react",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "localhost:3001/api",
-  "homepage": "localhost:3000",
+  "proxy" : "http://localhost:3001/api",
+  "homepage": "http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
